# HearME

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  DESIGN.md  Makefile  README.md  go.mod  hearme.desktop  hearme_0.1.0_amd64.deb  main.cpp  main.go  nfpm.yaml
config/: config.go
internal/cache/: cache.go
internal/lyrics/: lyrics.go
internal/models/: models.go
internal/provider/: provider.go
internal/provider/artists/: artists.go  lastfm.go  musicbrainz.go
internal/provider/jellyfin/: jellyfin.go
internal/provider/tours/: bandsintown.go  songkick.go  ticketmaster.go  tours.go
internal/scraper/: discovery.go  parser.go  scraper.go
internal/server/: server.go
native/: go.sum
packaging/: hearme_0.1.0_amd64.deb
src/audio/: AudioEngine.h
src/core/: App.cpp  App.h  Config.cpp  Config.h  EventBus.h
src/ecs/: Quadtree.cpp  Quadtree.h  components.h
src/network/: HttpClient.cpp  HttpClient.h  JellyfinClient.cpp  JellyfinClient.h  LastfmClient.cpp  LastfmClient.h  MusicBrainzClient.cpp  MusicBrainzClient.h
src/scraper/: TourSystem.cpp  TourSystem.h
src/ui/: GraphSystem.cpp  GraphSystem.h  Theme.cpp  Theme.h  ViewGraph.cpp  ViewGraph.h  ViewPlayer.cpp  ViewPlayer.h  ViewSettings.cpp  ViewSettings.h  ViewTours.cpp  ViewTours.h
web/: index.html
web/css/: winamp.css
web/js/: api.js  app.js  components.js  graph.js  grid.js  player.js  store.js
